[HOPSWORKS-3148] Update examples to use HSML

--- a/notebooks/ml/serving/kserve/python/model_serving_kserve_python.ipynb
+++ b/notebooks/ml/serving/kserve/python/model_serving_kserve_python.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Model Serving with KServe and Tensorflow - MNIST Classification\"\n",
-    "date: 2021-02-24\n",
+    "title: \"Model Serving with KServe and Python - Iris Flower Classification\"\n",
+    "date: 2021-01-10\n",
     "type: technical_note\n",
     "draft: false\n",
     "---"
@@ -16,9 +16,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Serving with KServe and Tensorflow - MNIST Classification\n",
+    "# Model Serving with KServe and Python - Iris Flower Classification\n",
     "---\n",
-    "*INPUT [ TRANSFORMER --> ENRICHED INPUT ] --> MODEL --> PREDICTION*\n",
+    "*INPUT --> [ TRANSFORMER --> ENRICHED INPUT ] --> PREDICTOR (MODEL) --> PREDICTION*\n",
     "\n",
     "<font color='red'> <h3>This notebook requires KServe to be installed</h3></font>"
    ]
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **NOTE:** It is assumed that a model called *mnist* is already available in Hopsworks. An example of training a model for the *MNIST handwritten digit classification problem* is available in `Jupyter/experiment/Tensorflow/mnist.ipynb`"
+    "> **NOTE:** It is assumed that a model called *irisflowerclassifier* is already available in Hopsworks. An example of training a model for the *Iris flower classification problem* is available in `Jupyter/end_to_end_pipelines/sklearn/end_to_end_sklearn.ipynb`"
    ]
   },
   {
@@ -38,6 +38,7 @@
     "\n",
     "![hops.png](../../../images/hops.png)\n",
     "\n",
+    "\n",
     "### Hopsworks Machine Learning (HSML) library\n",
     "\n",
     "`hsml` is the library to interact with the Hopsworks Model Registry and Model Serving. The library makes it easy to export, manage and deploy models. To learn more about `hsml`, see the <a href=\"https://docs.hopsworks.ai/machine-learning-api/latest\">Hopsworks Model Management</a> docs."
@@ -47,9 +48,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Serve the MNIST classifier\n",
+    "## Serve the Iris Flower classifier\n",
     "\n",
-    "Tensorflow models can be serve directly on KServe without a custom predictor script. "
+    "#### Predictor script\n",
+    "\n",
+    "To serve a Python Model, write a custom predictor script that loads the trained model and uses it to make predictions, by implementing the `__init__` and `predict` methods of the `Predict` class, respectively.\n",
+    "\n",
+    "A number of environment variables are available in the predictor, including `ARTIFACT_FILES_PATH` which contains the path to the model artifact files. To see all the environment variables available in the predictor, see the <a href=\"https://docs.hopsworks.ai/machine-learning-api/latest/generated/model-serving/predictor/\">Predictor docs</a>.\n",
+    "\n",
+    "Assuming a model file with name `iris_knn.pkl`, the following predictor script can be used to load the model and make predictions with it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "import os\n",
+    "from sklearn.externals import joblib\n",
+    "\n",
+    "class Predict(object):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        \"\"\"Prepare and load a trained model\"\"\"\n",
+    "        # NOTE: The env var ARTIFACT_FILES_PATH contains the path to the model artifact files\n",
+    "        \n",
+    "        # load the trained model\n",
+    "        self.model = joblib.load(os.environ[\"ARTIFACT_FILES_PATH\"] + \"/iris_knn.pkl\")\n",
+    "\n",
+    "    def predict(self, inputs):\n",
+    "        \"\"\"Serve prediction using a trained model\"\"\"\n",
+    "        return self.model.predict(inputs).tolist() # Numpy Arrays are note JSON serializable\n",
+    "```"
    ]
   },
   {
@@ -110,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Query Model Registry for best mnist Model"
+    "### Query Model Registry for best Iris Flower Classifier Model"
    ]
   },
   {
@@ -122,14 +152,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model name: mniste2e\n",
+      "Model name: irisflowerclassifier\n",
       "Model version: 1\n",
-      "{'accuracy': '0.65625'}\n"
+      "{'accuracy': '0.98'}\n"
      ]
     }
    ],
    "source": [
-    "MODEL_NAME=\"mniste2e\"\n",
+    "MODEL_NAME = \"irisflowerclassifier\"\n",
     "\n",
     "# Get the best version of the model\n",
     "best_model = mr.get_best_model(MODEL_NAME, \"accuracy\", \"max\")\n",
@@ -143,17 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create Deployment for the Trained Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create serving instance\n",
-    "mnistclassifier = best_model.deploy(serving_tool=\"KSERVE\")"
+    "### Create a Deployment for the Trained Model"
    ]
   },
   {
@@ -165,6 +185,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PREDICTOR_SCRIPT_PATH = mr.project_path + \"/Jupyter/serving/kserve/python/predictor.py\" # or .ipynb\n",
+    "\n",
+    "# Deploy the trained model\n",
+    "irisclassifier = best_model.deploy(serving_tool=\"KSERVE\",\n",
+    "                                   script_file=PREDICTOR_SCRIPT_PATH)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After the serving have been created, you can find it in the Hopsworks UI by going to the \"Deployments\" tab. You can also use the class attributes or the `.describe()` method of a deployment object to describe access its metadata."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -172,25 +212,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deployment: mniste2e\n",
+      "Deployment: irisflowerclassifier\n",
       "{\n",
-      "    \"artifact_version\": 0,\n",
+      "    \"artifact_version\": 4,\n",
       "    \"batching_enabled\": false,\n",
-      "    \"created\": \"2022-05-18T14:24:58.093Z\",\n",
+      "    \"created\": \"2022-05-18T14:46:00.07Z\",\n",
       "    \"creator\": \"Admin Admin\",\n",
-      "    \"id\": 6,\n",
+      "    \"id\": 9,\n",
       "    \"inference_logging\": \"ALL\",\n",
       "    \"kafka_topic_dto\": {\n",
       "        \"name\": \"CREATE\",\n",
       "        \"num_of_partitions\": 1,\n",
       "        \"num_of_replicas\": 1\n",
       "    },\n",
-      "    \"model_name\": \"mniste2e\",\n",
-      "    \"model_path\": \"/Projects/demo_ml_meb10000/Models/mniste2e\",\n",
-      "    \"model_server\": \"TENSORFLOW_SERVING\",\n",
+      "    \"model_name\": \"irisflowerclassifier\",\n",
+      "    \"model_path\": \"/Projects/demo_ml_meb10000/Models/irisflowerclassifier\",\n",
+      "    \"model_server\": \"PYTHON\",\n",
       "    \"model_version\": 1,\n",
-      "    \"name\": \"mniste2e\",\n",
-      "    \"predictor\": null,\n",
+      "    \"name\": \"irisflowerclassifier\",\n",
+      "    \"predictor\": \"predictor.py\",\n",
       "    \"predictor_resource_config\": {\n",
       "        \"cores\": 1,\n",
       "        \"gpus\": 0,\n",
@@ -203,8 +243,8 @@
     }
    ],
    "source": [
-    "print(\"Deployment: \" + mnistclassifier.name)\n",
-    "mnistclassifier.describe()"
+    "print(\"Deployment: \" + irisclassifier.name)\n",
+    "irisclassifier.describe()"
    ]
   },
   {
@@ -229,17 +269,17 @@
    "source": [
     "# from hsml.transformer import Transformer\n",
     "\n",
-    "# TRANSFORMER_SCRIPT_PATH = mr.project_path + \"/Jupyter/serving/kserve/tensorflow/transformer.py\" # or .ipynb\n",
+    "# TRANSFORMER_SCRIPT_PATH = mr.project_path + \"/Jupyter/serving/kserve/sklearn/transformer.py\" # or .ipynb\n",
     "\n",
-    "# mnistclassifier = best_model.deploy(serving_tool=\"KSERVE\",\n",
-    "#                                     transformer=Transformer(script_file=TRANSFORMER_SCRIPT_PATH))"
+    "# irisclassifier = best_model.deploy(serving_tool=\"KSERVE\",\n",
+    "#                                    transformer=Transformer(script_file=TRANSFORMER_SCRIPT_PATH))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Classify digits with the MNIST classifier"
+    "## Classify flowers with the Iris Flower classifier"
    ]
   },
   {
@@ -257,7 +297,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8abfac2d8de84948bf91d046f12bd73d",
+       "model_id": "3fce6b5743d74c589bc5d3d188c0f7b5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -270,8 +310,8 @@
     }
    ],
    "source": [
-    "if mnistclassifier.get_state().status == \"Stopped\":\n",
-    "    mnistclassifier.start()"
+    "if irisclassifier.get_state().status == \"Stopped\":\n",
+    "    irisclassifier.start()"
    ]
   },
   {
@@ -290,30 +330,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 7.00596943e-14, 0.0, 0.0, 0.0, 0.0, 1.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 7.00596943e-14, 0.0, 0.0, 0.0, 0.0, 1.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 7.00596943e-14, 0.0, 0.0, 0.0, 0.0, 1.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 7.00596943e-14, 0.0, 0.0, 0.0, 0.0, 1.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 7.00596943e-14, 0.0, 0.0, 0.0, 0.0, 1.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 7.00596943e-14, 0.0, 0.0, 0.0, 0.0, 1.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 7.00596943e-14, 0.0, 0.0, 0.0, 0.0, 1.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 7.00596943e-14, 0.0, 0.0, 0.0, 0.0, 1.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 7.00596943e-14, 0.0, 0.0, 0.0, 0.0, 1.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 7.00596943e-14, 0.0, 0.0, 0.0, 0.0, 1.0]]}\n"
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n"
      ]
     }
    ],
    "source": [
-    "for i in range(10):\n",
-    "    data = { \"signature_name\": \"serving_default\", \"instances\": [best_model.input_example] }\n",
-    "    predictions = mnistclassifier.predict(data)\n",
+    "for i in range(20):\n",
+    "    data = {\"inputs\" : [best_model.input_example]}\n",
+    "    predictions = irisclassifier.predict(data)\n",
     "    print(predictions)"
    ]
   },
@@ -321,7 +371,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Monitor Prediction Requests and Responses using Kafka"
+    "## Monitor Prediction Logs\n",
+    "\n",
+    "### Consume Prediction Requests and Responses using Kafka\n",
+    "\n",
+    "All prediction requestst are automatically logged to Kafka which means that you can keep track for your model's performance and its predictions in a scalable manner."
    ]
   },
   {
@@ -338,16 +392,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Setup Kafka consumer and subscribe to the topic containing the prediction logs"
+    "Setup a Kafka consumer and subscribe to the topic containing the prediction logs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TOPIC_NAME = mnistclassifier.inference_logger.kafka_topic.name\n",
+    "TOPIC_NAME = irisclassifier.inference_logger.kafka_topic.name\n",
     "\n",
     "config = kafka.get_kafka_default_config()\n",
     "config['default.topic.config'] = {'auto.offset.reset': 'earliest'}\n",
@@ -365,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,27 +436,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO -> servingId: 6, modelName: mniste2e, modelVersion: 1,requestTimestamp: 1652884488, inferenceId:8e71249a-e6ee-4ed8-902a-448e1e2a6d44, messageType:response\n",
-      "Predictions -> [[0.0, 0.0, 0.0, 0.0, 7.00596943e-14, 0.0, 0.0, 0.0, 0.0, 1.0]]\n",
+      "timeout.. no more messages to read from topic\n",
+      "INFO -> servingId: 9, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1652885195, inferenceId:e7f60cba-19ce-4550-a2ad-a8721d314420, messageType:response\n",
+      "Predictions -> [0]\n",
       "\n",
-      "INFO -> servingId: 6, modelName: mniste2e, modelVersion: 1,requestTimestamp: 1652884489, inferenceId:3ca12ec2-bb19-4999-9d1a-71165e95671b, messageType:response\n",
-      "Predictions -> [[0.0, 0.0, 0.0, 0.0, 7.00596943e-14, 0.0, 0.0, 0.0, 0.0, 1.0]]\n",
+      "INFO -> servingId: 9, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1652885195, inferenceId:52addd16-7291-4b67-94e2-fe676f656fd1, messageType:response\n",
+      "Predictions -> [0]\n",
       "\n",
-      "INFO -> servingId: 6, modelName: mniste2e, modelVersion: 1,requestTimestamp: 1652884489, inferenceId:12cb9329-0868-4cc1-81a9-e3697c10d4e7, messageType:response\n",
-      "Predictions -> [[0.0, 0.0, 0.0, 0.0, 7.00596943e-14, 0.0, 0.0, 0.0, 0.0, 1.0]]\n",
+      "INFO -> servingId: 9, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1652885196, inferenceId:4fead6f2-4d9f-4f47-af61-f5f1a5713065, messageType:response\n",
+      "Predictions -> [0]\n",
       "\n",
-      "INFO -> servingId: 6, modelName: mniste2e, modelVersion: 1,requestTimestamp: 1652884490, inferenceId:beabb1b1-e3d5-4acd-858b-fdbffa2a3b25, messageType:response\n",
-      "Predictions -> [[0.0, 0.0, 0.0, 0.0, 7.00596943e-14, 0.0, 0.0, 0.0, 0.0, 1.0]]\n",
-      "\n",
-      "INFO -> servingId: 6, modelName: mniste2e, modelVersion: 1,requestTimestamp: 1652884490, inferenceId:94e86c3b-8d86-434c-a4df-244d99999a9d, messageType:response\n",
-      "Predictions -> [[0.0, 0.0, 0.0, 0.0, 7.00596943e-14, 0.0, 0.0, 0.0, 0.0, 1.0]]\n",
+      "INFO -> servingId: 9, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1652885197, inferenceId:b5c80925-5dc8-435b-9710-47b949dd1a2b, messageType:response\n",
+      "Predictions -> [0]\n",
       "\n"
      ]
     }
