--- a/notebooks/ml/serving/kserve/sklearn/transformer.ipynb
+++ b/notebooks/ml/serving/kserve/sklearn/transformer.ipynb
@@ -3,27 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "da44c772",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Transformer(object):\n",
     "    def __init__(self):\n",
-    "        print(\"Initializing transformer\")\n",
-    "        # Initialization code goes here\n",
+    "        \"\"\"Initialization code goes here\"\"\"\n",
+    "        # NOTE: The env var ARTIFACT_FILES_PATH contains the path to the model artifact files\n",
     "\n",
     "    def preprocess(self, inputs):\n",
-    "        # Transform the request inputs here. The object returned by this method will be used as model input.\n",
+    "        \"\"\"Transform the request inputs. The object returned by this method will be used as model input.\"\"\"\n",
     "        return inputs\n",
     "\n",
     "    def postprocess(self, outputs):\n",
-    "        # Transform the predictions computed by the model before returning a response.\n",
+    "        \"\"\"Transform the predictions computed by the model before returning a response.\"\"\"\n",
     "        return outputs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b06bcc18",
+   "id": "68dfb287",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -45,7 +46,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
