Added Feature View Functional

--- a/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
@@ -68,7 +68,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>0</td><td>application_1612782748969_0002</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1612782748969_0002/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1612782748969_0002_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>15</td><td>application_1652868601260_0023</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://resourcemanager.service.consul:8089/proxy/application_1652868601260_0023/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://ip-172-31-31-0.eu-north-1.compute.internal:8044/node/containerlogs/container_e01_1652868601260_0023_01_000001/hsfs_basics__maksym00\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -121,19 +121,19 @@
     "             .option(\"inferSchema\", \"true\")\\\n",
     "             .option(\"header\", \"true\")\\\n",
     "             .format(\"csv\")\\\n",
-    "             .load(\"hdfs:///Projects/{}/Jupyter/hsfs/archive/stores data-set.csv\".format(hdfs.project_name()))\n",
+    "             .load(\"hdfs:///Projects/{}/Jupyter/archive/stores data-set.csv\".format(hdfs.project_name()))\n",
     "\n",
     "exogenous_csv = spark.read\\\n",
     "             .option(\"inferSchema\", \"true\")\\\n",
     "             .option(\"header\", \"true\")\\\n",
     "             .format(\"csv\")\\\n",
-    "             .load(\"hdfs:///Projects/{}/Jupyter/hsfs/archive/Features data set.csv\".format(hdfs.project_name()))\n",
+    "             .load(\"hdfs:///Projects/{}/Jupyter/archive/Features data set.csv\".format(hdfs.project_name()))\n",
     "\n",
     "sales_csv = spark.read\\\n",
     "             .option(\"inferSchema\", \"true\")\\\n",
     "             .option(\"header\", \"true\")\\\n",
     "             .format(\"csv\")\\\n",
-    "             .load(\"hdfs:///Projects/{}/Jupyter/hsfs/archive/sales data-set.csv\".format(hdfs.project_name()))"
+    "             .load(\"hdfs:///Projects/{}/Jupyter/archive/sales data-set.csv\".format(hdfs.project_name()))"
    ]
   },
   {
@@ -174,12 +174,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "store_fg_meta = fs.create_feature_group(name=\"store_fg\",\n",
-    "                                       version=1,\n",
-    "                                       primary_key=['store'],\n",
-    "                                       description=\"Store related features\",\n",
-    "                                       time_travel_format=None,\n",
-    "                                       statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True, \"exact_uniqueness\": True})"
+    "store_fg_meta = fs.create_feature_group(\n",
+    "    name = \"store_fg\",\n",
+    "    version = 2,\n",
+    "    primary_key = ['store'],\n",
+    "    description = \"Store related features\",\n",
+    "    online_enabled = True\n",
+    ")"
    ]
   },
   {
@@ -193,15 +194,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f3a442f2ed0>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "store_fg_meta.save(stores_fg)"
    ]
@@ -264,28 +257,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sales_fg_meta = fs.create_feature_group(name=\"sales_fg\",\n",
-    "                                        version=1,\n",
-    "                                        primary_key=['store', 'dept', 'date'],\n",
-    "                                        description=\"Sales related features\",\n",
-    "                                        time_travel_format=None,                                        \n",
-    "                                        statistics_config=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f3a43b712d0>"
-     ]
-    }
-   ],
-   "source": [
+    "sales_fg_meta = fs.create_feature_group(\n",
+    "    name = \"sales_fg\",\n",
+    "    version = 1,\n",
+    "    primary_key = ['store', 'dept', 'date'],\n",
+    "    description = \"Sales related features\",\n",
+    "    online_enabled = True\n",
+    ")\n",
+    "\n",
     "sales_fg_meta.save(sales_fg)"
    ]
   },
@@ -298,24 +277,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f3a442f2890>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sales_part_fg_meta = fs.create_feature_group(name=\"sales_fg\",\n",
-    "                                        version=2,\n",
-    "                                        partition_key=['store'],\n",
-    "                                        description=\"Sales related features\",\n",
-    "                                        time_travel_format=None,                                                                                          \n",
-    "                                        statistics_config=False)\n",
+    "sales_part_fg_meta = fs.create_feature_group(\n",
+    "    name=\"sales_fg\",\n",
+    "    version=2,\n",
+    "    partition_key=['store'],\n",
+    "    description=\"Sales related features\",\n",
+    "    time_travel_format=None,                                                                                          \n",
+    "    statistics_config=False\n",
+    ")\n",
+    "\n",
     "sales_part_fg_meta.save(sales_fg)"
    ]
   },
@@ -332,17 +306,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sales_part_fg_meta = fs.create_feature_group(name=\"sales_fg\",\n",
-    "                                        version=3,\n",
-    "                                        primary_key=['store', 'dept', 'date'],\n",
-    "                                        online_enabled=True,\n",
-    "                                        description=\"Sales related features\",\n",
-    "                                        time_travel_format=None,                                             \n",
-    "                                        statistics_config=False)\n",
+    "sales_part_fg_meta = fs.create_feature_group(\n",
+    "    name=\"sales_fg\",\n",
+    "    version=3,\n",
+    "    primary_key=['store', 'dept', 'date'],\n",
+    "    online_enabled=True,\n",
+    "    description=\"Sales related features\",\n",
+    "    online_enabled = True\n",
+    ")\n",
+    "\n",
     "sales_part_fg_meta.save(sales_fg)"
    ]
   },
@@ -358,18 +334,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "exogenous_fg = exogenous_csv.withColumn('date', F.to_date(\"date\", 'dd/MM/yyy'))\n",
     "\n",
-    "exogenous_fg_meta = fs.create_feature_group(name=\"exogenous_fg\",\n",
-    "                                            version=1,\n",
-    "                                            primary_key=['store', 'date'],\n",
-    "                                            description=\"External features that influence sales, but are not under the control of the distribution chain\",\n",
-    "                                            time_travel_format=None,                                            \n",
-    "                                            statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True, \"exact_uniqueness\": True})\n",
+    "exogenous_fg_meta = fs.create_feature_group(\n",
+    "    name = \"exogenous_fg\",\n",
+    "    version = 1,\n",
+    "    primary_key = ['store', 'date'],\n",
+    "    description = \"External features that influence sales, but are not under the control of the distribution chain\",\n",
+    "    online_enabled = True\n",
+    ")\n",
+    "\n",
     "exogenous_fg_meta.save(exogenous_fg)"
    ]
   },
@@ -384,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,11 +371,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "exogenous_fg_meta = fs.get_feature_group('exogenous_fg', 1)\n",
+    "exogenous_fg_meta = fs.get_feature_group(\n",
+    "    name = 'exogenous_fg',\n",
+    "    version = 1\n",
+    ")\n",
+    "\n",
     "exogenous_fg_meta.insert(exogenous_fg_2013)"
    ]
   },
@@ -426,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,9 +417,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<hsfs.feature_group.FeatureGroup object at 0x7fac041b3280>"
+     ]
+    }
+   ],
    "source": [
     "exogenous_fg_meta.append_features([Feature(\"appended_feature\", type=\"double\", default_value=\"10.0\")])"
    ]
@@ -453,30 +443,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7ff4e1fe13d0>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "exogenous_fg_meta = fs.create_feature_group(name=\"exogenous_fg\",\n",
-    "                                        version=2,\n",
-    "                                        primary_key=['store', 'date'],\n",
-    "                                        description=\"External features that influence sales, but are not under the control of the distribution chain\",\n",
-    "                                        time_travel_format=None,                                                                                        \n",
-    "                                        statistics_config=False)\n",
+    "exogenous_fg_meta = fs.create_feature_group(\n",
+    "    name = \"exogenous_fg\",\n",
+    "    version = 2,\n",
+    "    primary_key = ['store', 'date'],\n",
+    "    description = \"External features that influence sales, but are not under the control of the distribution chain\",\n",
+    "    time_travel_format=None,                                                                                        \n",
+    "    statistics_config=False\n",
+    ")\n",
+    "\n",
     "exogenous_fg_meta.save(exogenous_fg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,11 +470,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
